# ProyectoGherkinCucumber-

./: .env.example  .gitignore  AGENTS.md  README.md  comandos.txt  pyproject.toml  requirements.txt
docs/: arquitectura.md
resumen/: agents_explicado.md  cobertura_resumenes_auditoria.md  comandos_explicado.md  config_explicado.md  env_example_explicado.md  makefile_explicado.md  pyproject_explicado.md  readme_explicado.md  requirements_explicado.md  templates_feature_template_explicado.md
resumen/ai_qa_gherkin/: cli_explicado.md  error_explicado.md  logger_explicado.md  models_explicado.md  orchestrator_explicado.md  package_entrypoints_explicado.md  retry_explicado.md
resumen/ai_qa_gherkin/clients/: __init___explicado.md  confluence_client_explicado.md  git_client_explicado.md  jira_client_explicado.md  llm_client_explicado.md  xray_client_explicado.md
resumen/ai_qa_gherkin/models/: __init___explicado.md  domain_explicado.md
resumen/ai_qa_gherkin/prompts/: gherkin_prompt_explicado.md
resumen/ai_qa_gherkin/resources/: domain_rules_json_explicado.md
resumen/ai_qa_gherkin/services/: __init___explicado.md  analysis_service_explicado.md  collector_service_explicado.md  (+5 more)
resumen/scripts/: scripts_resumen.md
resumen/tests/: tests_resumen.md
scripts/: debug_jira_fields.py  smoke_config.py  smoke_confluence_client.py  smoke_git_client.py  smoke_jira_client.py  smoke_xray_client.py  ssss.py
src/ai_qa_gherkin/: __main__.py  cli.py  config.py  error.py  logger.py  models.py  orchestrator.py  retry.py
templates/: feature.template.j2
tests/: smoke.feature  test_analysis_service.py  test_collector_service.py  test_domain_rules.py  test_gherkin_service.py  test_llm_client.py  test_models.py  test_orchestrator_service.py  test_summary_service.py  test_text_cleaner.py  test_validator_service.py
(+20 files in other folders)
